# chemview

./: .gitignore  Cargo.toml  notes.md  readme.md  roadmap.md
data/: caffeine.sdf  chlorophyll_c.sdf  dopamine.sdf  element_data.json  h2.sdf  hf.sdf  methane.sdf  scraper.py
src/: app.rs  camera.rs  compound.rs  loader.rs  main.rs  mesh.rs  mmcif.rs  parser.rs  pipeline.rs  renderer.rs  sdf.rs  shader.rs  shader.wgsl  shape.rs  tesselate.rs  tessellate.rs  ui.rs
