[package]
name = "chemview"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
bytemuck = "1.25.0"
wgpu = "28.0.0"
winit = "0.30.12"
pollster = "0.4.0"
glam = { version = "0.20.2", default-features = false, features = ["libm", "bytemuck"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
